--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html{
     max-width: 1920px;
+    height: 3749px;
 }
 body {
     max-width: 1920px;
@@ -10,22 +11,19 @@ body {
     color: #333;
 }
 
-
-
-
-/* Header and logo */
+/* Header */
 header {
-    max-width: 1920px;
     background: #f4f4f4;
-    padding: 3rem 2rem;
+    padding: 2rem 6rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
     position: sticky; 
     top: 0;
-   
-  
 }
+
+
+
 
 .hero h1 span.highlight {
     color: #731010; 
@@ -42,8 +40,7 @@ header {
 
 
 .hero h1 br {
-    
-    line-height: 1.5; 
+     line-height: 1.5; 
     
 }
 
@@ -68,7 +65,7 @@ nav ul li {
 nav ul li a {
     text-decoration: none;
     color: #333;
-    font-size: 2.5rem;
+    font-size: 1.5rem;
     padding: 0.5rem;
     transition: color 0.3s ease;
 }
@@ -117,20 +114,21 @@ header .logo {
 /* Hero */
 .hero {
     max-width: auto;
+    height: 650px;
     text-align: start; 
-    padding: 4rem 2rem;
+    padding: 2rem 2rem;
     background: url('images/Surface\ Skis\ Home\ header.webp') no-repeat center center;
     background-size: cover; 
     color: white;
     display: flex; 
     flex-direction: column; 
-    margin-bottom: 150px;
+    margin-bottom: 100px;
 }
 .heroAbout {
     height: 650px;
     font-size: 4rem;
     text-align: start; 
-    padding: 4rem 2rem;
+    padding: 2rem 2rem;
     background: url('images/Banner\ about.png') no-repeat center center;
     background-size: cover; 
     color: white;
@@ -138,7 +136,7 @@ header .logo {
     flex-direction: column; 
     justify-content: center; 
     align-items: center; 
-    margin-bottom: 150px;
+    margin-bottom: 100px;
 }
 
 .heroSki {
@@ -174,14 +172,14 @@ header .logo {
 
 
 .hero h1 {
-    font-size: 6rem;
+    font-size: 5rem;
     margin-bottom: 0.2rem;
     
     
 }
 
 .hero p {
-    font-size: 3rem;
+    font-size: 2.5rem;
     margin-bottom: 2rem;
     
 }
@@ -189,10 +187,10 @@ header .logo {
 .hero a {
     background: #731010; 
     color: white; 
-    padding: 2rem 6rem;
+    padding: 2rem 4rem;
     text-decoration: none;
     border-radius: 5px; 
-    font-size:4rem;
+    font-size:3.5rem;
     text-align: center; 
     
     
@@ -218,10 +216,6 @@ h3 {
 
 }
 
-@media (max-width: 2000) {
-     h3 { font-size: 1.2rem; /* Adjust the font size as needed */ } }
-
-
 /* Products */
 .product-section {
     padding: 3rem 2rem;
@@ -245,7 +239,7 @@ h3 {
     text-align: left;
     min-width: 250px; 
     transition: transform 0.3s, box-shadow 0.3s;
-    margin-bottom: 400px;
+    margin-bottom: 200px;
 }
 
 .product:hover {
@@ -274,9 +268,9 @@ h3 {
 
 /* Closeout */
 .Closeout {
-    height: 700px;
+    height: 650px;
     text-align: center; 
-    padding: 4rem 2rem;
+    padding: 2rem 2rem;
     background: url('images/Banner\ closeout.png') no-repeat center center;
     background-size: cover; 
     color: white;
@@ -304,10 +298,10 @@ h3 {
 .Closeout .btn {
     background: #731010; 
     color: white;
-    padding: 2rem 13rem;
+    padding: 2rem 12rem;
     text-decoration: none;
     border-radius: 5px; 
-    font-size: 4rem;
+    font-size: 3rem;
     text-align: center;
     display: inline-block;
 }
@@ -324,6 +318,7 @@ h3 {
 
 /* Media */
 .surface-media {
+    height: 720px;
     display: flex;
     justify-content: space-between;
     gap: 2rem;
@@ -377,7 +372,7 @@ h3 {
 
 
 .Message{
-    max-width: 1300px;
+    max-width: 1500px;
     display: flex;
     font-size: 1.5rem;
     align-items: start;
@@ -399,7 +394,7 @@ footer {
     background-color: lightgray; 
     color: black; 
     height: 200px; 
-    padding: 2rem; 
+    padding: 1.5rem; 
     display: flex;
     flex-direction: column;
     justify-content: space-between;
